Update the blocked FFT routines to use static final vector species defintions